# training-cpp

./: CMakeLists.txt  README.md
src/: Glisse.cpp  Glisse.h  Platine.cpp  Platine.h  Roller.cpp  Roller.h  basic.cpp  basic.h  canonical.cpp  canonical.h  smart-pointer.cpp  smart-pointer.h  stl-test.cpp  stl-test.h  training-cpp.cpp
